# graphic-prog-assignment-1

./: .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.h  ebo.cpp  ebo.h  entity.cpp  entity.h  main.cpp  map.cpp  map.h  vao.cpp  vao.h  vbo.cpp  vbo.h
shaders/: default.vert  ghost.vert  player.frag  player.vert  shader.h
